# Abschlussprojekt_puSS2026

./: README.md  athlet_dashboard.py  athlete_dashboard.py  auswertung.py  auswertung_dashboard.py  create_csv.py  login.py  main.py  personenklasse.py  pyproject.toml  register.py  requirements.txt  trainer_dashboard.py  training_calendar.py
data/: feedback.csv  triathlon_personen.csv  triathlon_regeneration.csv  triathlon_training.csv  users_secure.csv  wettkaempfe.csv
