[project]
name = "Abschlussprojekt_puSS2026"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Leonieanna", email = "sl1666@mci4me.at"},
]
dependencies = ["streamlit>=1.58.0", "streamlit-calendar>=1.4.0", "plotly>=6.9.0", "openpyxl>=3.1.5"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
